--- a/index-en.html
+++ b/index-en.html
@@ -213,7 +213,7 @@
 					visibility: true,
 					projection: dproj,
 					strategies: [new OpenLayers.Strategy.Fixed()],
-					style: {strokeWidth: 4, strokeColor: "#000dbba3", strokeOpacity: 1},
+					style: {strokeWidth: 4, strokeColor: "#555da3", strokeOpacity: 1},
 					protocol: new OpenLayers.Protocol.HTTP({
 						url: "lines/en/line_8.kml",
 						format: new OpenLayers.Format.KML
@@ -256,7 +256,7 @@
 			});
 
 		//var layers = [line_1, line_2, line_3, line_3a, line_3b, line_4, line_4a, line_5, line_6, line_6a, line_7, line_7a, line_7b, line_8, line_9, line_10, busstops];
-		var layers = [line_1, line_2, line_3, line_3a, line_4, line_5, line_6, line_6a, line_7, line_9, line_10, busstops] // Grouping layers
+		var layers = [line_1, line_2, line_3, line_3a, line_4, line_5, line_6, line_6a, line_7, line_8, line_9, line_10, busstops] // Grouping layers
 		map.addLayers(layers); // Adding grouped layers
 
 		// Declaring Select feature Control with all layers in this code...
