--- a/index-en.html
+++ b/index-en.html
@@ -62,6 +62,7 @@
 		map.addLayers(maplayers);
 
 
+
 			// Adding all Bus lines... 
 			// Each bus line has its own .kml file with a Name and Description in it.
 			// Theyre separated on their own layers, each one with a different color
@@ -256,7 +257,7 @@
 			});
 
 		//var layers = [line_1, line_2, line_3, line_3a, line_3b, line_4, line_4a, line_5, line_6, line_6a, line_7, line_7a, line_7b, line_8, line_9, line_10, busstops];
-		var layers = [line_1, line_2, line_3, line_3a, line_4, line_5, line_6, line_6a, line_7, line_8, line_9, line_10, busstops] // Grouping layers
+		var layers = [line_1, line_2, line_3, line_3a, line_3b, line_4, line_5, line_6, line_6a, line_7, line_8, line_9, line_10, busstops] // Grouping layers
 		map.addLayers(layers); // Adding grouped layers
 
 		// Declaring Select feature Control with all layers in this code...
