--- a/index-sq.html
+++ b/index-sq.html
@@ -8,7 +8,7 @@
 	<script src="OpenLayers-2.11/OSM/OpenStreetMap.js" type="text/javascript"></script>
 	<script type="text/javascript">
 
-	var lat=42.6587964665222; // Declaring Latitude
+	var lat=42.6607964665222; // Declaring Latitude
 	var lon=21.1601991592407; // Declaring Longtitude
 	var zoom=14; //Declaring Zoom Level
         var map, select, options;
@@ -255,8 +255,9 @@
 					})
 			});
 
-		//var layers = [line_1, line_2, line_3, line_3a, line_3b, line_4, line_4a, line_5, line_6, line_6a, line_7, line_7a, line_7b, line_8, line_9, line_10, busstops];
-		var layers = [line_1, line_2, line_3, line_3a, line_3b, line_4, line_5, line_6, line_6a, line_7, line_8, line_9, line_10, busstops] // Grouping layers
+		// Line 4a and 7b not available yet.
+		// Grouping layers.
+		var layers = [line_1, line_2, line_3, line_3a, line_3b, line_4, line_5, line_6, line_6a, line_7, line_7a, line_8, line_9, line_10, busstops]
 		map.addLayers(layers); // Adding grouped layers
 
 		// Declaring Select feature Control with all layers in this code...
@@ -310,7 +311,7 @@
         }
     </script>
 	<body onload="init()">
-		<div id="map" style="border: 1px solid; width: 927px; height: 520px;">
+		<div id="map" style="border: 1px solid; width: 927px; height: 540px;">
 		</div>
 	</body>
 </div>
