--- a/index-en.html
+++ b/index-en.html
@@ -1,11 +1,53 @@
 <html>
-<style type="text/css" media="screen">
-* {
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-}
+<head><style type="text/css" media="screen">
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
 h2 {
     border-bottom: 1px solid #AAAAAA;
     color: #126186;
@@ -13,8 +55,9 @@ h2 {
     margin: 0 5px 5px 0;
     padding: 0 0 5px;
 }
+#map {box-shadow: 0pt 5px 15px rgba(0, 0, 10, 0.4); border: 3px solid #066E9F; width: 927px; height: 540px; border-radius: 20px 20px 20px 20px;}
 </style>
-<div style="background: none repeat scroll 0 0 #FFFFFF; color: #222222; font-family: 'Lucida Grande',Verdana,Geneva,Lucida,Arial,Helvetica,sans-serif; font-size: 75%; margin: -2px 0 0 0; line-height: 1.5;">
+
 	<script src="http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=true&amp;key=ABQIAAAAIJkIWUwL-qZOUgdjU9jEYBS-N4goPV7H5LfiEuoXMtUlDExD6xQNLVK7CL8MGcDbjRodyqkTBIaPvg" type="text/javascript"></script>
 	<script src="OpenLayers-2.11/lib/OpenLayers.js" type="text/javascript"></script>
 	<script src="OpenLayers-2.11/OSM/OpenStreetMap.js" type="text/javascript"></script>
@@ -323,9 +366,8 @@ h2 {
             }
         }
     </script>
-	<body onload="init()">
-		<div id="map" style="box-shadow: 0pt 5px 15px rgba(0, 0, 10, 0.4); border: 3px solid #066E9F; width: 927px; height: 540px; border-radius: 20px 20px 20px 20px;">
-		</div>
-	</body>
-</div>
+</head>	
+<body onload="init()">
+	<div id="map"></div>
+</body>
 </html>
